<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_store_add">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#edeef0">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etStoreAddName"
                        android:hint="@string/name"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/etStoreAddphone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark" />


                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:layout_gravity="left"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/colorPrimaryDark" />

                    <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etStoreAddAddress"
                    android:hint="@string/address"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sStoreAddState" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:id="@+id/tvCity"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/colorPrimaryDark" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sStoreAddCity" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etStoreAddCity"
                        android:singleLine="true"
                        android:visibility="gone"
                        android:hint="@string/city"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/township"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:id="@+id/tvTownship"
                        android:textColor="@color/colorPrimaryDark" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sStoreAddTownship" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etStoreAddTownship"
                        android:singleLine="true"
                        android:visibility="gone"
                        android:hint="@string/township"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RIF_and_other_codes"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etStoreAddCode"
                        android:singleLine="true"
                        android:hint="@string/RIF_and_other_codes"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_channel"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:id="@+id/sStoreAddType" />

                    <CheckBox
                        android:id="@+id/cbStoreAddBelongChain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/belong_chain" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sStoreAddChain"
                        android:spinnerMode="dialog"
                        android:visibility="gone"
                        android:layout_gravity="center_horizontal" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etStoreAddChain"
                        android:hint="@string/required_chain"
                        android:singleLine="true"
                        android:visibility="gone"
                        android:textColor="@color/colorPrimaryDark" />

                    <CheckBox
                        android:id="@+id/cbIsYezz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/is_yezz_store" />

                    <CheckBox
                        android:id="@+id/cbHasPop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/has_pop_installed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sStoreAddcategory" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/observations"
                        android:layout_gravity="left"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etStoreAddComments"
                        android:hint="@string/observations"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_register"
                        android:onClick="clickAddStore"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
            </ScrollView>

    </LinearLayout>


    <!-- The navigation drawer -->
    <ListView
    android:id="@+id/left_drawer_store_add"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:choiceMode="singleChoice"
    android:divider="@android:color/black"
    android:dividerHeight="1dp"
    android:background="#162125"
    android:listSelector="@android:color/darker_gray"/>
</android.support.v4.widget.DrawerLayout>
