<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_blue">

    <LinearLayout
        android:layout_width="@dimen/abc_dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginTop="88dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#edeef0">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="false"
            android:src="@drawable/logo_app"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:inputType="textCapSentences"
            android:textColor="#000000"
            android:textSize="20dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etResetPasswordPassword"
            android:textColorHint="#6c6969"
            android:textColor="#000000"
            android:hint="@string/new_password" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etResetPasswordConfirm"
            android:textColorHint="#6c6969"
            android:textColor="#000000"
            android:hint="@string/new_password_confirm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/reset_password_info" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp">

            <Button
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/send"
                android:background="@color/ButtonTradeOk"
                android:onClick="clickResetPasswordSend"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>