<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_customer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#edeef0">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#edeef0"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_title"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textAlignment="center"
                android:paddingBottom="20dp"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCustomerSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etCustomerSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surname"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCustomerPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_position"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etCustomerPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/store_position"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCustomerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etCustomerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCustomerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etCustomerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCustomerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etCustomerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/address"
                android:inputType="textPersonName" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="saveCustomer"
                    android:text="@string/to_register" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="cancelRegister"
                    android:text="Omitir" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer_quantitative"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/black"
        android:dividerHeight="1dp"
        android:background="#162125"
        android:listSelector="@android:color/darker_gray"/>
</android.support.v4.widget.DrawerLayout>
